# glotter

./: .gitignore  NOTICE.md  README.md
.github/workflows/: release.yml
package/: typst.toml
scripts/: build.sh  fetch-model.sh
wasm-plugin/: Cargo.toml
wasm-plugin/src/: lib.rs
