[package]
name = "glotter_plugin"
version = "0.1.0"
edition = "2021"
rust-version = "1.89"
license = "MIT"
publish = false

[lib]
crate-type = ["cdylib"]

[dependencies]
fasttext-pure-rs = { version = "0.1.0", default-features = false }
wasm-minimal-protocol = "0.2"

[profile.release]
codegen-units = 1
lto = "fat"
opt-level = "z"
panic = "abort"
strip = "symbols"